#654718 by Michelle: Check if Panels is enabled before trying to build the forum displays to avoid errors when Page Manager is used without Panels. Synced to commit #480122
#866562 by Michelle, vladgur: Don't show any create content links if Forum Access doesn't allow it. Synced to commit #480174
NOISSUE by troky: Added silver_bells_stacked. Synced with commit #480366

January 20, 2011
----------------
#1032750 by GStegemann: Fixed call to undefined function db_fetch_array()
#1019196 by jonb_cirris: Fixed broken hook_permission(). Impossible to set permissions on D7 + AF


January 14, 2011
----------------
#1024626 by federico: Changed comments to comment to reflect change in table name in D7.

January 5, 2011
----------------
#1015922 by troky: Initial Drupal 7 port. Serious Kudos to Troky ( http://drupal.org/user/1013060 ). He did _all_ the work on this port. The only part I had in it is a little clean up to sync with CVS. Thank you very much!




****************************** DRUPAL 6 - 2.x BRANCH ********************************

December 7, 2010
----------------
#974840 by Michelle: Fixed CSS / HTML so topic header links aren't floating around messily.
#974840 by Michelle: Fiddled a bit more with the CSS.
#933862 by Michelle: Added new permission to view post edited message and excluded it from the NC cache.
#982604 by Michelle: Added core signatures to cache avoiding tokens. Impossible to do with SfF because it needs too much node info.

December 4, 2010
----------------
#982238 by Michelle: Forced 'New topic' to first in list of node creation links.
#982238 by Michelle: Added ability to get nodes allowed in a particular vocabulary and set up stub for per term.
#974840 by Michelle: Redid 'Post reply' link handling.
NOISSUE by Michelle: Created new theme function theme_advanced_forum_l() to centralize link printing and give themers more control.
NOISSUE by Michelle: Expanded statistics to show last 5 new users.