@@ -8,16 +8,15 @@
   color: #FFFFFF;
 }
 
-tr.even td.forum-folder .forum-icon-wrapper span, 
+tr.even td.forum-folder .forum-icon-wrapper span,
 tr.odd td.forum-folder .forum-icon-wrapper span {
   background: transparent url(images/forum_list_default.png) no-repeat center center;
 }
 
-tr.even td.forum-folder-new-posts .forum-icon-wrapper span, 
+tr.even td.forum-folder-new-posts .forum-icon-wrapper span,
 tr.odd td.forum-folder-new-posts .forum-icon-wrapper span {
   background: transparent url(images/forum_list_new_posts.png) no-repeat center center;
 }
-
 
 /* FORUM LIST ICON LEGEND ***************************************************/
 .forum-folder-legend .forum-folder {
@@ -32,10 +31,10 @@ tr.odd td.forum-folder-new-posts .forum-icon-wrapper span {
 /* Based on http://css-tricks.com/examples/ButtonMaker */
 
 a.af-button-large,
-a.af-button-large:link, 
+a.af-button-large:link,
 a.af-button-large:visited,
 a.af-button-small,
-a.af-button-small:link, 
+a.af-button-small:link,
 a.af-button-small:visited,
 a.author-pane-link,
 a.author-pane-link:link,
@@ -60,7 +59,7 @@ a.author-pane-link:hover {
    color: #333333;
    border-top-color: #EFEFEF;
 }
-   
+
 a.af-button-large:active,
 a.af-button-small:active,
 a.author-pane-link:active {
