@@ -1,13 +1,41 @@
 /* $Id$ */
 
 /*
-This file contains colors, graphics, and text effects. 
+This file contains colors, graphics, and text effects.
 
 Colors used:
+  #3C78A7 fonts
   #C8DBEA main border, header background
   #EDF5FA background #1
   #E7F2F9 background #2
 */
+
+/*** PAGER *******************************************************************/
+
+.forum-pager .pager a:link,
+.forum-pager .pager a:visited,
+#forum-comments .pager a:link,
+#forum-comments .pager a:visited {
+  border: 1px solid #C8DBEA;
+  background: #EDF5FA;
+  background: -webkit-gradient(linear, left top, left bottom, from(#CBE2F1), to(#EDF5FA));
+  background: -moz-linear-gradient(top, #CBE2F1, #EDF5FA);
+  color: #3C78A7;
+}
+
+.forum-pager .pager-current,
+.forum-pager .pager a:hover,
+#forum-comments .pager-current,
+#forum-comments .pager a:hover {
+  background: #3C78A7;
+  color: #FFFFFF !important;
+}
+
+.forum-pager .pager a.active,
+#forum-comments .pager a.active {
+  color: #333333;
+}
+
 
 /*** FORUM & TOPIC LIST ******************************************************/
 
@@ -23,29 +51,29 @@ Colors used:
 }
 
 /* Headers */
-.forum-table th {
-  background-color: #C8DBEA;
-}
-
-.forum-table th {
+.forum-table thead tr {
+  border-top: 1px solid #FFFFFF;
+  background: #EDF5FA;
+  background: -webkit-gradient(linear, left top, left bottom, from(#EDF5FA), to(#C8DBEA));
+  background: -moz-linear-gradient(top, #EDF5FA, #C8DBEA);
   color: #3C78A7;
   line-height: 1.5em;
   padding: 2px 5px;
 }
 
-.forum-table th a,
-.forum-table th a:visited,
-.forum-table th a:link {
-  color:#3C78A7;
+.forum-table thead tr a,
+.forum-table thead tr a:visited,
+.forum-table thead tr a:link {
+  color: #3C78A7;
 }
 
 /* Rows, both tables */
 .forum-table tr.odd {
-  background-color: #EDF5FA;
+  background: #EDF5FA;
 }
 
 .forum-table tr.even {
-  background-color: #E7F2F9;
+  background: #E7F2F9;
 }
 
 .forum-table td {
@@ -64,7 +92,10 @@ td.forum-details .forum-name a {
 }
 
 #forum-statistics-header {
-  background-color: #C8DBEA;
+  border-top: 1px solid #FFFFFF;
+  background: #EDF5FA;
+  background: -webkit-gradient(linear, left top, left bottom, from(#EDF5FA), to(#C8DBEA));
+  background: -moz-linear-gradient(top, #EDF5FA, #C8DBEA);
   color: #3C78A7;
 }
 
@@ -80,7 +111,7 @@ td.forum-details .forum-name a {
   color: #494949;
 }
 
-/*** FORUM THREADS ***********************************************************/
+/*** FORUM TOPICS **********************************************************/
 
 .forum-post {
   border: 1px solid #C8DBEA !important;
@@ -91,6 +122,10 @@ td.forum-details .forum-name a {
 .forum-post-wrapper,
 .forum-post-footer {
   border: 2px solid white;
+  background: #EDF5FA;
+  background: -webkit-gradient(linear, left top, left bottom, from(#EDF5FA), to(#C8DBEA));
+  background: -moz-linear-gradient(top, #EDF5FA, #C8DBEA);
+  color: #3C78A7;
 }
 
 .forum-post-info {
@@ -100,19 +135,32 @@ td.forum-details .forum-name a {
   border-bottom: none;
 }
 
+.forum-post-number a {
+  color: #3C78A7 !important;
+}
+
+/* Wrapper around AP and content */
+.forum-post-wrapper {
+  background-color: #E7F2F9;
+  border-bottom: 2px solid white;
+}
+
+/* Author information pane */
+.forum-post-panel-sub .author-pane .picture img {
+  border: 1px solid #C8DBEA;
+  padding: 5px;
+  background-color: #FFFFFF;
+}
+
 /* Post text area */
 .forum-post-panel-main {
   border: none;
   background-color: white;
 }
 
-.forum-post-wrapper {
-  background-color: #E7F2F9;
-  border-bottom: 2px solid white;
-}
-
 .forum-post-title {
   border-bottom: none;
+  border-left: 2px solid white;
   background-color: #EDF5FA;
   line-height: 225%;
   padding-bottom: 2px;
@@ -124,9 +172,23 @@ td.forum-details .forum-name a {
 }
 
 .forum-jump-links {
-  border-right: 2px solid white;
+  border-right: none;
 }
 
-.forum-post-title {
-  border-left: 2px solid white;
+/* Box under top post before first reply */
+.forum-top-post-footer {
+  border: 1px solid #C8DBEA;
+  background: #EDF5FA;
+  background: -webkit-gradient(linear, left top, left bottom, from(#EDF5FA), to(#C8DBEA));
+  background: -moz-linear-gradient(top, #EDF5FA, #C8DBEA);
+  color: #3C78A7;
+}
+
+/* Topic navigation */
+.forum-topic-navigation {
+  border: 1px solid #C8DBEA;
+  background: #EDF5FA;
+  background: -webkit-gradient(linear, left top, left bottom, from(#EDF5FA), to(#C8DBEA));
+  background: -moz-linear-gradient(top, #EDF5FA, #C8DBEA);
+  color: #3C78A7;
 }
